--- a/docker.yaml
+++ b/docker.yaml
@@ -4,7 +4,11 @@ locale: ja_JP.utf8
 package_upgrade: true
 packages:
   - tmux
+  - python3
+  - python3-pip
+runcmd:
   - curl -sSL https://get.docker.com/ | CHANNEL=stable sh
+  - pip3 install docker-compose
 power_state:
   delay: "+10"
   mode: reboot
